# minimal-utils

./: CMakeLists.txt  README.md
MinimalUtils/: CMakeLists.txt
MinimalUtils/include/MinimalUtils/: MinimalBuffer.h  MinimalCrypt.h  MinimalHash.h  MinimalMessage.h  MinimalMessageHandler.h  MinimalSerializer.h  MinimalStream.h  MinimalStreamer.h  MinimalString.h
MinimalUtils/source/: MinimalBuffer.cpp  MinimalCrypt.cpp  MinimalHash.cpp  MinimalMessage.cpp  MinimalMessageHandler.cpp  MinimalSerializer.cpp  MinimalStream.cpp  MinimalStreamer.cpp  MinimalString.cpp
